# orcid-fetcher

./: Cargo.toml  README.md
.github/: CODEOWNERS
.github/actions/package-binaries/: action.yml  package.ps1  package.sh
.github/workflows/: audit.yml  ci.yml  lint.yml  release-build.yml  release-test.yml  test.yml
crates/orcid-works-cli/: Cargo.toml  build.rs
crates/orcid-works-cli/src/: api.rs  compare.rs  io.rs  main.rs
crates/orcid-works-model/: Cargo.toml
crates/orcid-works-model/src/: lib.rs
examples/orcid-works/: filter.jq  test.ps1  test.sh
